# sp-engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.cpp
src/draw_shapes/: drawLib.c  drawLib.h
src/init/: initEngine.c  initEngine.h
src/struct/: structLib.h
